[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/intro.gd" type="Script" id=1]

[node name="intro" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 163.0
margin_bottom = 14.0
text = "Welcome to Solar Village!"

[node name="HBoxContainer_TeamName" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 163.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_TeamName"]
margin_top = 5.0
margin_bottom = 19.0

[node name="TeamName" type="LineEdit" parent="VBoxContainer/HBoxContainer_TeamName"]
margin_left = 4.0
margin_right = 62.0
margin_bottom = 24.0

[node name="HBoxContainer_Role" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 163.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer_Role"]
margin_top = 3.0
margin_bottom = 17.0

[node name="RoleChoiceMenu" type="OptionButton" parent="VBoxContainer/HBoxContainer_Role"]
margin_left = 4.0
margin_right = 33.0
margin_bottom = 20.0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 163.0
margin_bottom = 114.0

[node name="Stage2" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_right = 163.0
margin_bottom = 20.0
text = "Stage 2"

[node name="Stage3" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_top = 24.0
margin_right = 163.0
margin_bottom = 44.0
text = "Stage 3"
